# cross

myproje/: .gitignore  Pipfile  db.sqlite3  pyproject.toml  requests  requirements.txt  server.js  urls.py  wsgi.py
myproje/assets/: staticfiles.json
myproje/assets/fonts/: beyond_the_mountains.41f5e8ff1d98.ttf.br
myproje/assets/images/: message.svg.br  nav_next.svg.br  nav_prev.93bfe5c0b227.svg.br  nav_rect.svg.br  phone-call.5c4ee6e30339.svg.br  placeholder.c8dcecd82f3b.svg.br  planet-earth.svg.br  search.ad6dc6244d65.svg.br
myproje/assets/js/: about_custom.js.br  blog_custom.js.br  contact_custom.js.br  custom.js.br  elements_custom.js.br  offers_custom.0794e7856cfa.js.br  single_listing_custom.js.br
myproje/assets/styles/: about_responsive.13127da71642.css.br  about_styles.84ff551d0d85.css  about_styles.84ff551d0d85.css.br  about_styles.css.br  blog_responsive.f1ba7c7b4d58.css.br  (+25 more)
myproje/blog/: models.py
myproje/myproje/: asgi.py  settings.py  urls.py  wsgi.py
myproje/users/: .models.py.swo  .models.py.swp  .urls.py.swj  .urls.py.swk  .urls.py.swl  .urls.py.swm  .urls.py.swn  .urls.py.swo  .urls.py.swp  .views.py.svx  .views.py.svy  .views.py.svz  .views.py.swa  .views.py.swb  .views.py.swc  .views.py.swd  .views.py.swe  .views.py.swf  .views.py.swg  .views.py.swh  .views.py.swi  .views.py.swj  .views.py.swk  .views.py.swl  .views.py.swm  .views.py.swn  .views.py.swo  .views.py.swp  __init__.py  admin.py  apps.py  models.py  package.json  serializers.py  urls.py  utils.py  views.py
myproje/users_frontend/: package-lock.json  package.json
(+209 files in other folders)
